# PaperRank

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: pagerank.py
backend/app/services/: scholar.py
frontend/: .env.example  README.md  package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GraphView.tsx  MathSimulation.tsx  Navbar.tsx  SearchBar.tsx
frontend/src/lib/: api.ts
