[project]
name = "backend"
version = "0.1.0"
description = "Backend Libraries"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.46.0",
]
